--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Roboto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d3d1d1;
+}
+.wrapper {
+  background-color: #fff;
+  padding: 20px 10%;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-photo {
+  width: 100%;
+  margin: 30px auto;
+  height: 90vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: block;
+  position: relative;
+}
+.main-title {
+  position: absolute;
+  padding: 50px;
+  width: 70%;
+  left: 20px;
+  bottom: 100px;
+  background-color: #ffffff60;
+  color: darkmagenta;
+}
+.main-arrow {
+  position: absolute!important;
+  top: 400px;
+}
+.main-arrow_back {
+  left: 20px;
+}
+.main-arrow_next {
+  right: 20px;
+}
+
+.game {
+  margin-top: 100px;
+}
+.game-line {
+  border: none;
+  background-color: darkmagenta;
+  height: 2px;
+  width: 30%;
+  margin-left: 0;
+  margin-top: 20px;
+}
+.game-wrapper {
+  position: relative;
+  height: 40vh;
+  margin-top: 40px;
+}
+.game-img {
+  position: absolute;
+  width: 200px;
+}
+.game-img_nastya {
+  left: 0;
+}
+.game-img_arab {
+  right: 0;
+}
+.game-text {
+  font-size: 20px!important;
+  width: 50%;
+}
+.game-zone {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #d3d1d1;
+  border-radius: 4px;
+}
+.game-variants {
+  display: flex;
+  align-items: center;
+  padding: 20px 0;
+  flex-wrap: wrap;
+}
+.game-variant {
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #fff;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.game-error {
+  font-size: 20px;
+  color: red;
+  margin-top: 10px;
 }
